--- a/wasm/index.html
+++ b/wasm/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
 
     <link rel="stylesheet" href="/common/css/style.css">
-    <link rel="stylesheet" href="/common/css/jquery-linedtextarea.css">
 
   </head>
 
@@ -33,12 +32,13 @@
       <div class="row">
         <div class="col-md-6 pt-3">
           <h2>Formula</h2>
-          <textarea v-model="formula"
-                    class="formula-textarea"
-		    id="mytextarea"
-                    v-on:input="onInput()">
-	  </textarea>
 
+	  <div style="height: 300px">
+            <editor editor-id="formulaEditor"
+		    :content="formula"
+		    v-on:change-content="changeEditorContent">
+	    </editor>
+	  </div>
           <textarea v-model="error_text"
                     class="error-textarea"
 		    :class="error ? 'error' : ''"
@@ -71,7 +71,7 @@
 	    <div class="canvas-controls">
 	      <span v-if="loading">
 		<a class="mx-1">
-		  <i class="fas fa-hourglass-half fa-spin"
+		  <i class="fas fa-circle-notch fa-spin"
 		     aria-hidden="true"></i>
 		</a>
 	      </span>
@@ -129,13 +129,13 @@
 
     <script src="/node_modules/axios/dist/axios.min.js"></script>
     <script src="/node_modules/showdown/dist/showdown.min.js"></script>
+    <script src="https://rawgit.com/ajaxorg/ace-builds/master/src-min-noconflict/ace.js"></script>
 
     <!-- Our app's code -->
-    <script src="/common/js/jquery-linedtextarea2.js"></script>
     <script src="/common/js/component_help.js"></script>
     <script src="/common/js/component_discussion.js"></script>
     <script src="/common/js/component_statusdialog.js"></script>
-
+    <script src="/common/js/component_editor.js"></script>
     <script src="/wasm/app.js"></script>
   </body>
 </html>
