--- a/wasm/index.html
+++ b/wasm/index.html
@@ -39,7 +39,7 @@
 		    v-on:change-content="changeEditorContent">
 	    </editor>
 	  </div>
-          <textarea v-model="error_text"
+          <textarea v-model="errorText"
                     class="error-textarea"
 		    :class="error ? 'error' : ''"
 		    disabled
