--- a/wasm/index.html
+++ b/wasm/index.html
@@ -69,25 +69,22 @@
 
 	    <!-- buttons -->
 	    <div class="canvas-controls">
-	      <span v-if="loading">
-		<a class="mx-1">
-		  <i class="fas fa-circle-notch fa-spin"
-		     aria-hidden="true"></i>
-		</a>
-	      </span>
-	      <span v-else>
-		<a style="cursor:pointer" class="mx-1"
-		   v-show="running"
-		   v-on:click="pause"
-		   >
-		  <i class="fa fa-pause" aria-hidden="true"></i>
-		</a>
-		<a style="cursor:pointer" class="mx-1"
-		   v-show="!running"
-		   v-on:click="resume">
-		  <i class="fa fa-play" aria-hidden="true"></i>
-		</a>
-	      </span>
+	      <a class="mr-1"
+		 v-show="loading">
+		<i class="fas fa-circle-notch fa-spin"
+		   aria-hidden="true"></i>
+	      </a>
+	      <a style="cursor:pointer" class="mr-1"
+		 v-show="!loading && running"
+		 v-on:click="pause"
+		 >
+		<i class="fa fa-pause" aria-hidden="true"></i>
+	      </a>
+	      <a style="cursor:pointer" class="mr-1"
+		 v-show="!loading && !running"
+		 v-on:click="resume">
+		<i class="fa fa-play" aria-hidden="true"></i>
+	      </a>
 
 	      <div class="float-right">
 		<span class="mx-1 text-muted small">
@@ -95,7 +92,7 @@
 		  <span v-else>Computing fps...</span>
 		</span>
 		<a id="fullScreenButton"
-		   class="mx-1"
+		   class="ml-1"
 		   style="cursor:pointer" title="Full screen"
 		   v-on:click="fullScreen">
 		  <i class="fa fa-expand" aria-hidden="true"></i>
