Allow formula to access libs (like noise/).

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -34,7 +34,8 @@
           <h2>Formula</h2>
 
 	  <div style="height: 300px">
-            <editor editor-id="formulaEditor"
+            <editor style="font-size: 0.75rem;"
+		    editor-id="formulaEditor"
 		    :content="formula"
 		    v-on:change-content="changeEditorContent">
 	    </editor>
